--- a/.github/workflows/REMIX.yml
+++ b/.github/workflows/REMIX.yml
@@ -29,7 +29,8 @@ jobs:
         sudo apt-get install -y --no-install-recommends \
           build-essential git make gcc-aarch64-linux-gnu binutils-aarch64-linux-gnu \
           device-tree-compiler python3 python3-dev python3-setuptools python3-pyelftools \
-          swig libssl-dev
+          swig libssl-dev libgnutls28-dev pkg-config
+
 
     # 2. Fetch sources
     - name: Clone U‑Boot
