--- a/.github/workflows/uni.yml
+++ b/.github/workflows/uni.yml
@@ -94,6 +94,8 @@ jobs:
           first=1
           for d in "${arr[@]}"; do
             arch=$(infer_arch "$d")
+            if [[ $arch -eq arm64 ]];then
+              arch=aarm64
             needs_qemu=$( [[ "$d" =~ qemu ]] && echo "true" || echo "false" )
             [[ $first -eq 0 ]] && json+=","
             json+="{\"defconfig\":\"$d\",\"arch\":\"$arch\",\"needs_qemu\":\"$needs_qemu\"}"
