--- a/.github/workflows/uni.yml
+++ b/.github/workflows/uni.yml
@@ -94,7 +94,7 @@ jobs:
           first=1
           for d in "${arr[@]}"; do
             arch=$(infer_arch "$d")
-            if [[ $arch -eq arm64 ]];then
+            if [[ $arch -eq "arm64" ]];then
               arch=aarm64
             fi
             needs_qemu=$( [[ "$d" =~ qemu ]] && echo "true" || echo "false" )
