--- a/.github/workflows/REMIX.yml
+++ b/.github/workflows/REMIX.yml
@@ -56,9 +56,11 @@ jobs:
       working-directory: ${{ env.UBOOT_DIR }}
       env:
         ROCKCHIP_TPL: "$(ls ../rkbin/bin/rk35/rk3566_ddr_1056MHz_v*.bin | sort | tail -n1)"
-        BL31: "$(ls ../rkbin/bin/rk35/rk3568_bl31_v*.elf | sort | tail -n1)"
+        BL31: "$(ls ../rkbin/bin/rk35/rk3566_ddr_1056MHz_v*.bin | sort | tail -n1)"
         
       run: |
+        export ROCKCHIP_TPL="$(ls $RKBIN_DIR/bin/rk35/rk3566_ddr_1056MHz_v*.bin | sort | tail -n1)"
+        export BL31="$(ls $RKBIN_DIR/bin/rk35/rk3568_bl31_v*.elf | sort | tail -n1)"
         make \
           CROSS_COMPILE=aarch64-linux-gnu- -j"$(nproc)"
 
