--- a/.github/workflows/REMIX.yml
+++ b/.github/workflows/REMIX.yml
@@ -61,6 +61,7 @@ jobs:
       run: |
         ROCKCHIP_TPL="$(ls ../$RKBIN_DIR/bin/rk35/rk3566_ddr_1056MHz_v*.bin | sort | tail -n1)"
         BL31="$(ls ../$RKBIN_DIR/bin/rk35/rk3568_bl31_v*.elf | sort | tail -n1)"
+        TEE="$(ls ../$RKBIN_DIR/bin/rk35/rk3568_bl32_v*.bin | sort | tail -n1)"
         make \
           CROSS_COMPILE=aarch64-linux-gnu- -j"$(nproc)"
 
